2008-02-11  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Support keynav in status icons.  (#473786, Li Yuan)

	* gtk/gtkstatusicon.c: Handle keynav, make the tray icon
	focusable.

	* gtk/gtktrayicon-x11.c: Draw a focus rectangle when
	focused.

2008-02-11  Kristian Rietveld  <kris@imendio.com>

	Merge from trunk:

	* gtk/gtkcellview.c (gtk_cell_view_cell_layout_reorder)
	* gtk/gtkiconview.c (gtk_icon_view_cell_layout_reorder): plug leak
	wrt. link deletion from list; contination of fix for #503569.

2008-02-11  Emmanuele Bassi  <ebassi@gnome.org>

	Merge from trunk:

	* gtk/gtkrecentchoosermenu.c:
	(gtk_recent_chooser_menu_constructor): Set no-show-all flag
	on the placeholder menu item.

	* tests/testrecentchoosermenu.c: 
	(create_recent_chooser_menu): Use gtk_widget_show_all() to test
	whether the placeholder menu item gets shown.

2008-02-10  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk:

	* gtk/gtkrecentaction.c: Propagate local-only.  (#511987,
	Jonh Wendell)

2008-02-08  Richard Hult  <richard@imendio.com>

	Merge from trunk:

	* gdk/quartz/gdkevents-quartz.c (gdk_event_translate): Ignore the
	delta from the NSEvent for now, generating multiple scroll events
	results in a lot of events getting queued up and things get really
	slow.

2008-02-08  Sven Herzberg  <sven@imendio.com>

	Merge from trunk:

	Adjust the code to match the documentation, examples, "common sense"
	and existing applications.

	* gtk/gtkaction.c: (_gtk_action_sync_menu_visible): take into account
	that a GtkMenu for a <popup> element doesn't have to have a GtkAction
	assigned

2008-02-06  Cody Russell  <bratsche@gnome.org>

	Merge from trunk:

	* gdk/win32/gdkevents-win32.c: Check if the window is a temp window,
	otherwise things get wonky when you click on a menu.  This fixes
	a regression caused in #505928.  Thanks to Tor for spotting this
	one!  (#514789)

2008-02-05  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk:
